Actions
Bug #12632
closedserengeti: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../../sun4u/os/plat_ecc_unum.c: In function 'plat_log_fruid_error': ../../../sun4u/os/plat_ecc_unum.c:221: error: assignment makes integer from pointer without a cast ../../../sun4u/os/plat_ecc_unum.c:307: error: assignment makes integer from pointer without a cast *** Error code 1 dmake: Fatal error: Command failed for target `obj64/plat_ecc_unum.o' Current working directory /code/illumos-gate/usr/src/uts/sun4u/serengeti/platmod ../../../sun4u/serengeti/io/ssm.c: In function 'ssm_make_nodes': ../../../sun4u/serengeti/io/ssm.c:690: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../../common/sys/sunddi.h:1577: note: expected 'int' but argument is of type 'void *' *** Error code 1 dmake: Warning: Command failed for target `obj64/ssm.o' Current working directory /code/illumos-gate/usr/src/uts/sun4u/serengeti/ssm
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 35e1ee58e7a1d8c7874269affd084e732ad5a1eb
commit 35e1ee58e7a1d8c7874269affd084e732ad5a1eb Author: Toomas Soome <tsoome@me.com> Date: 2020-05-08T05:35:45.000Z 12632 serengeti: NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions