12632 serengeti: NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>